Added more elements in first column

--- a/CFO & Risk Advisory.html
+++ b/CFO & Risk Advisory.html
@@ -152,22 +152,49 @@
         <div class="col-sm-3 body-text">
             <h4 style="text-align:left">Our Services</h4>
             <ul>
-                <li>Process Improvement & Risk advisory</li>
+                <li> <a href="#f"> Process Improvement & Risk advisory </a></li>
             <br>
-                <li>Auditing and Assurance</li>
+                <li> <a href="#f">Auditing and Assurance</a></li>
             <br>
-                <li>Tax and regulatory</li>
+                <li><a href="#f">Tax and regulatory</a></li>
             <br>
-                <li>Transfer Pricing</li>
+                <li><a href="#f">Transfer Pricing</a></li>
             <br>
-                <li>Company Secretarial</li>
+                <li><a href="#f">Company Secretarial</a></li>
             <br>
-                <li>Corporate Finance</li>
+                <li><a href="#f">Corporate Finance</a></li>
             <br>
-                <li>Financial Accounting</li>
+                <li><a href="#f">Financial Accounting</a></li>
             <br>
-                <li>Transaction Advisory</li>
+                <li><a href="#f">Transaction Advisory</a></li>
             </ul>
+            <br>
+            <br>
+
+            <div class="div2">For more information on how we can help create value for your organisation
+                <br>
+
+               Download Profile
+            </div>
+            <br>
+            <br>
+
+            <div class="div3">Interested in working with us?
+                <br>
+                <a href="#f">Explore a Career @ Finsurity</a>
+            </div>
+            <br>
+            <br>
+
+            <div class="div4">
+                Need Help?
+                <br>
+               <p align="right">+911140160160</p>
+                <p align="right"> info@coinmen.com</p>
+            </div>
+
+
+
 
         </div>
 
