--- a/process-improvement-risk-advisory.html
+++ b/process-improvement-risk-advisory.html
@@ -20,7 +20,7 @@ maximum-scale=1.0, user-scalable=no" />
 </head>
 <body style="overflow-x: hidden">
 <!-- partial:index.partial.html -->
-<section class="navigation">
+<section class="navigation ">
     <div style="background: rgb(255,255,255);">
         <a href="index.html"><img src="images/Finsurety.png" style="height:80px;margin-bottom: 2px; display: block;
   margin-left: auto;
@@ -60,17 +60,21 @@ maximum-scale=1.0, user-scalable=no" />
     </div>
     </div>
 </section>
+
 <div class="nav-ht-fix"></div>
 <div>
     <div class="main-bg">
-        <div class="bg-tax-regulatory "></div>
+        <div class="bg-risk-advisory"></div>
         <div class="centered main-text-heading">
-            Tax
+            Process Improvement
+            <br>
             And
-            Regulatory
+            <br>
+            Risk Advisory
         </div>
     </div>
 </div>
+
 <div class="container-fluid">
     <div class="row flex-column-reverse flex-sm-row">
         <div class="col-sm-3">
@@ -79,11 +83,11 @@ maximum-scale=1.0, user-scalable=no" />
                     <div style="padding: 10px 20px 20px 10px">
                         <h4 style="text-align:left">Our Services</h4>
                         <ul class="ul-sidenav-list" type="none">
-                            <li><a href="#f"> Process Improvement & Risk advisory </a></li>
+                            <li><a href="process-improvement-risk-advisory.html"> Process Improvement & Risk advisory </a></li>
                             <br>
                             <li><a href="#f">Auditing and Assurance</a></li>
                             <br>
-                            <li><a href="#f">Tax and regulatory</a></li>
+                            <li><a href="tax-and-regulatory.html">Tax and regulatory</a></li>
                             <br>
                             <li><a href="#f">Transfer Pricing</a></li>
                             <br>
@@ -123,66 +127,90 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
         <div class="col-sm-9">
             <div class="body-text-2">
-                <h2>The Dynamic Nature of Tax Laws:
-                </h2>
-                <p>
-                    Indian tax laws and their regulation in an ever changing dynamic economy are a tough area to
-                    expertise in. Given the rapid transition of our growing economy, even tax policymakers are trying to
-                    cope up with the pace by making frequent and necessary changes to the tax laws, while India climbs
-                    up the ‘ease of doing business’ charts globally.
-                </p>
-                <h4>Finsurety’s Tax Advisory Services</h4>
-                <p>At Finsurety Advisors, along with our team of experienced tax consultants take this challenge head
-                    on, by carefully examining the client’s needs and coming up with effective solutions. We provide
-                    practical and commercially focused solutions for our clients under the purview of various tax laws.
-                    Our tax services include tax advisory and regulatory services that can help you minimise your tax
-                    exposure and highlight the risks presented by constantly evolving and increasingly complex
-                    legislation.
+                <h2>Why Process Improvement ?</h2>
+                <p> Successful and sustainable businesses adapt to changes in their markets, the economic situation,
+                    technology and government regulations. This requires sustained efforts and disciplined management,
+                    also strategies to ensure that business processes are constantly adapting and improving.
                 </p>
                 <p>
-                    Whether you are an Expatriate, a Non-Resident Indian or a Resident Indian - organisation or an
-                    individual, we’re here to assist and advise you on all your tax needs.
+                    We at <b>Finsurety Advisors</b>, offer assessments and assistance that helps businesses improve their
+                    internal processes, streamline their organisational structure, drive cost reductions and improve
+                    quality of reporting and interdepartmental communication.
                 </p>
+                <p>
+                    We provide analysis and advice to improve an organization's productivity, usually by refining
+                    strategy, internal controls and processes. We offer a range of services focused on adding value to
+                    the client. The various scenarios implemented include:
 
-                    Majority of tax laws in India can be classified in 2 broad categories:
-                <ul style="padding-left: 40px">
-                    <li>
-                        Direct Tax laws and
+                    <br>
+                <ul style="padding-left:40px; font-weight: bold">
+                    <li>Development & Improvement of Internal Processes
                     </li>
-                    <li>
-                        Indirect Tax laws
+                    <li>Creating Management Information Systems
                     </li>
-                </ul>
-                The direct tax laws in India mainly consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Income Tax Act 1961,
+                    <li>Creating Organisation & Hierarchy Structure
                     </li>
-                    <li>
-                        Subsequent amendments made to it,
+                    <li>Cost &amp; Profit Centre Planning
                     </li>
-                    <li>
-                        Rules and circulars issued by CBDT
+                    <li>Sales Planning and Reporting
                     </li>
-                </ul>
-                The indirect tax laws in India used to contain a plethora of laws levied by both state and centre.
-                    Currently the Indirect Tax laws in India consist of:
-                <ul style="padding-left: 40px">
-                    <li>
-                        The Goods and Services Tax Act 2017
+                    <li>Human Capital Management
                     </li>
-                    <li>
-                        Subsequent amendments made to it,
+                    <li>Plant and Machinery Capacity Planning
                     </li>
-                    <li>
-                        Rules and circulars issued by CBIDT
+                    <li>Business Planning and Consolidation of Subsidiary Companies
+                    </li>
+                    <li>Implementation of process improvement techniques like Lean Management and Rapid Improvement
                     </li>
                 </ul>
-                <p>
-                    Apart from this, certain state Value Added Tax (VAT), The Central Excise Act 1944, and The Customs
-                    Duty Act 1962 continue to still be applied on some goods, like petrol, alcohol etc.
+                <h4>Our Approach</h4>
+                <p>We intricately apply the DMAIC (Define, Measure, Analyze, Improve, Control) approach as our
+                    underlying business process improvement methodology. DMAIC is a proven, data-driven methodology. It
+                    can be scaled according to the scope and depth of your process improvement program.
                 </p>
-                <br>
+                <p>Even the most successful and well-managed companies recognize the value of business process
+                    improvement consulting. This allows businesses to leverage best practices in designing and
+                    implementing an improvement process.
+                </p>
+                <p>We provide the intellectual capital required for successful business process improvement services to
+                    offer a fresh perspective and practical implementation experience. Our continuous process
+                    improvement services can help guide you through a complicated business transformation.
+                </p><br>
+                <h2>Why Risk Advisory ?
+                </h2>
+                <p>Risk is a persistent and pervasive aspect of business today, and to address it successfully you need
+                    a team that offers more than risk advisory expertise alone. Growing companies face ever-evolving
+                    risks, but with guidance from <b>Finsurety Advisors</b>, your approach to risk management can be much more
+                    than a preventative measure - it can be a strategic driver. </p>
+                <p>With an increase in corporate failures, there is an additional focus from regulators, financial
+                    institutions, as well as independent directors on the way various processes, controls and IT
+                    securities are being managed.</p>
+                <h4>Our Approach</h4>
+                <p>Our Risk Advisory Services assist in mitigating the exposure to business risks by proactively
+                    identifying the blind spots and helping organizations use them to their advantage. Our services are
+                    specially designed to address the clients’ varying organizational needs.
+                </p>
+                <p>We focus on the combination of risk mitigation by carefully examining the strengths and weaknesses
+                    using the SWOT analysis tailored to the needs of the business. We provide a one-stop solution to our
+                    multiple clients on their risk and process needs.
+                </p>
+                <p>
+                    Our risk advisory services include:
+                <ul style="padding-left:40px; font-weight: bold ">
+                    <li>Financial Risk Management Advisory
+                    </li>
+                    <li>Succession Planning
+                    </li>
+                    <li>Cyber and IT Risk advisory
+                    </li>
+                    <li>Government order and regulations risk advisory
+                    </li>
+                    <li>Transaction Advisory
+                    </li>
+                    <li>Business Process Risk (BRP)
+                    </li>
+                </ul><br>
+
                 <hr style="height:2px;color:gray;background-color:gray;text-align:left;width:100%;margin-left:0">
                 <br>
                 <h4>Reporting Partners</h4>
